--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "formidable": "^1.1.1",
+    "cors": "^2.8.5",
     "gulp": "^4.0.2",
     "light-http-server": "^1.0.10",
     "nodemon": "^2.0.4",
